--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -17,50 +17,72 @@
         card:cardElevation="2dp"
         card:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:src="@drawable/tumblr"
-                android:scaleType="centerCrop"/>
-
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="2"
-                android:orientation="horizontal" >
-                <TextView
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
-                    android:id="@+id/title"/>
+                android:columnCount="3"
+                android:orientation="horizontal">
 
-                <TextView/>
+                <TextView
+                    android:layout_width="256dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_row="1"
+                    android:textSize="18sp"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="11dp"
+                    android:id="@+id/title"
+                    android:textIsSelectable="false"
+                    android:text="Title text"
+                    android:autoText="false"
+                    android:singleLine="true" />
 
                 <TextView
                     android:id="@+id/cardDescription"
-                    android:layout_width="200dp"
+                    android:layout_width="247dp"
                     android:layout_height="wrap_content"
                     android:text="Test information"
-                    android:textSize="14sp"
-                    android:paddingBottom="16dp"
-                    android:paddingLeft="16dp" />
+                    android:textSize="11sp"
+                    android:paddingBottom="9dp"
+                    android:paddingLeft="16dp"
+                    android:textStyle="italic"
+                    android:paddingTop="8dp"
+                    android:layout_column="0"
+                    android:layout_row="2" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/textView2"
+                    android:layout_row="3"
+                    android:layout_column="0"
+                    android:text="DATE"
+                    android:paddingLeft="16dp"
+                    android:paddingBottom="9dp" />
 
                 <TextClock android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="16dp"
-                    android:paddingBottom="16dp"
+                    android:paddingBottom="9dp"
                     android:layout_gravity="bottom|right"
                     android:textSize="14sp"
                     android:textColor="@color/md_grey_700"
-                    />
+                    android:layout_row="3"
+                    android:layout_column="1" />
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_column="2"
+                    android:layout_row="1"
+                    android:id="@+id/priority_flag"
+                    android:src="@drawable/flag_yellow"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_rowSpan="3"
+                    android:layout_gravity="top" />
             </GridLayout>
-        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
