--- a/app/src/main/res/layout/activity_add_new_card.xml
+++ b/app/src/main/res/layout/activity_add_new_card.xml
@@ -5,104 +5,90 @@
     android:layout_height="fill_parent">
 
 
-<ScrollView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:isScrollContainer="true"
-    android:orientation="vertical"
-    android:scrollbars="vertical"
-    tools:context="com.dreamteam.organizeyourday.AddNewCardActivity">
-
-
-    <TimePicker
-        android:id="@+id/time"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:timePickerMode="spinner" />
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:textSize="24sp" />
+        android:layout_height="wrap_content">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:isScrollContainer="true"
+            android:orientation="vertical"
+            android:scrollbars="vertical"
+            tools:context="com.dreamteam.organizeyourday.AddNewCardActivity">
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/inputTitleText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <TimePicker
+                android:id="@+id/time"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:timePickerMode="spinner"
+                />
 
-    <TextView
-        android:id="@+id/textViewDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/data"
+                android:text="data"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-  <android.support.design.widget.TextInputEditText
-      android:id="@+id/inputTextDescription"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      />
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/timeButton"
+                android:text="set date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="?android:attr/borderlessButtonStyle"
+                />
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="24sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputTitleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:text="Priority"
-            android:layout_gravity="center_vertical"
-            android:textSize="16sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"/>
-        <Spinner
-            android:id="@+id/prioritySpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/Priority">
-        </Spinner>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textViewDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:layout_marginTop="16dp"
+                android:textSize="16sp"/>
 
-    <android.support.v7.widget.ButtonBarLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:layout_marginTop="8dp">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputTextDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/cancel_button"
-            android:layout_width="0dip"
-            android:layout_height="60dip"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Cancel"
-            android:textSize="16sp"
-            android:layout_marginRight="40dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp">
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/addButton"
-            android:layout_width="0dip"
-            android:layout_height="60dip"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Add"
-            android:textSize="16sp"
-            android:layout_gravity="end"/>
+                <TextView
+                    android:text="Priority"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="16sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"/>
+                <Spinner
+                    android:id="@+id/prioritySpinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/Priority">
+                </Spinner>
+            </LinearLayout>
 
-    </android.support.v7.widget.ButtonBarLayout>
-
-
-</LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
