--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -29,13 +29,12 @@
                     android:layout_height="wrap_content"
                     android:layout_column="0"
                     android:layout_row="0"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:paddingLeft="16dp"
                     android:paddingTop="11dp"
                     android:id="@+id/card_title"
                     android:textIsSelectable="false"
                     android:text="Title text"
-                    android:autoText="false"
                     android:singleLine="true"
                     android:layout_columnSpan="2"
                     android:layout_gravity="bottom" />
@@ -78,7 +77,9 @@
                     android:paddingBottom="9dp"
                     android:layout_marginRight="10dp" />
 
-                <TextClock android:layout_width="wrap_content"
+                <TextView
+                    android:text="TIME"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="9dp"
                     android:layout_gravity="bottom"
