--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -13,6 +13,7 @@
         android:layout_height="180dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay"
+
         >
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -47,17 +48,48 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
-    <TextView
-        android:id="@+id/textAbout"
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Создать напоминание..."
-        android:textSize="18dp"
-        android:textStyle="italic"
-        android:textColor="#616161"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:isScrollContainer="true"
+        android:orientation="vertical"
+        android:scrollbars="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="24sp"
+                android:layout_marginTop="25dp" />
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/editTitleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:layout_marginTop="16dp"
+                android:textSize="16sp"/>
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/editDescriptionText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/saveEditCard"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="21sp"
+                android:text="SAVE"/>
+        </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
