--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -27,7 +27,7 @@
                 <TextView
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
-                    android:layout_column="0"
+                    android:layout_column="1"
                     android:layout_row="0"
                     android:textSize="20sp"
                     android:paddingLeft="16dp"
@@ -46,10 +46,10 @@
                     android:src="@drawable/flag_yellow"
                     android:layout_gravity="center|fill_vertical|right"
                     android:layout_row="0"
-                    android:layout_column="2"
-                    android:layout_columnSpan="2"
+                    android:layout_column="0"
                     android:layout_rowSpan="3"
-                    android:paddingRight="16dp" />
+                    android:paddingRight="16dp"
+                    android:layout_marginLeft="14dp" />
 
                 <TextView
                     android:id="@+id/card_description"
@@ -61,7 +61,7 @@
                     android:paddingLeft="16dp"
                     android:textStyle="italic"
                     android:paddingTop="8dp"
-                    android:layout_column="0"
+                    android:layout_column="1"
                     android:layout_row="1"
                     android:layout_columnSpan="2" />
 
@@ -71,7 +71,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:id="@+id/card_date"
                     android:layout_row="2"
-                    android:layout_column="0"
+                    android:layout_column="1"
                     android:text="DATE"
                     android:paddingLeft="16dp"
                     android:paddingBottom="9dp"
@@ -86,9 +86,9 @@
                     android:textSize="14sp"
                     android:textColor="@color/md_grey_700"
                     android:layout_row="2"
-                    android:layout_column="1"
+                    android:layout_column="2"
                     android:id="@+id/card_time"
-                    android:layout_marginLeft="30dp" />
+                    android:layout_marginLeft="10dp" />
 
             </GridLayout>
     </android.support.v7.widget.CardView>
